# adafruit-macropad-rp2040-getting-started

./: .gitignore  CMakeLists.txt  README.md
audio_test/: CMakeLists.txt  audio_test.c
blink/: CMakeLists.txt  blink.c
board_test/: CMakeLists.txt  board_test.c
display_test/: CMakeLists.txt  display_test.c
hello_usb/: CMakeLists.txt  hello_usb.c
neopixel_test/: CMakeLists.txt  neopixel_test.c  ws2812.pio
rotary_test/: CMakeLists.txt  rotary_test.c
usb_keyboard_test/: CMakeLists.txt  main.c
